Fix usages of `editor` as a CSS namespace, replaced by `post-editor`

--- a/assets/stylesheets/shared/functions/_z-index.scss
+++ b/assets/stylesheets/shared/functions/_z-index.scss
@@ -61,7 +61,7 @@ $z-layers: (
 		'.wp-editor-tools': 1,
 		'.plan .gridicons-checkmark-circle': 1,
 		'.plan-discount-message': 1,
-		'.editor__switch-mode': 1,
+		'.post-editor__switch-mode': 1,
 		'.auth__form .form-fieldset input': 1,
 		'.chart__empty': 1,
 		'.chart__bar-marker': 1,
