--- a/client/components/select-dropdown/style.scss
+++ b/client/components/select-dropdown/style.scss
@@ -90,9 +90,7 @@ $compact-header-height: 35;
 	.is-compact & {
 		height: #{$compact-header-height }px;
 		line-height: #{$compact-header-height - 3 }px;
-		color: $gray-text-min;
 		font-size: 11px;
-		text-transform: uppercase;
 
 		.count {
 			border-width: 0;
@@ -126,7 +124,8 @@ $compact-header-height: 35;
 		vertical-align: text-bottom;
 
 		.is-compact & {
-			display: none;
+			position: relative;
+			top: 2px;
 		}
 	}
 }
