--- a/client/extensions/woocommerce/components/list/list-item-field/style.scss
+++ b/client/extensions/woocommerce/components/list/list-item-field/style.scss
@@ -3,5 +3,9 @@
 	box-sizing: border-box;
 	flex-direction: column;
 	justify-content: center;
-	padding: 16px 24px;
+	padding: 16px;
+
+	@include breakpoint( ">480px" ) {
+		padding: 16px 24px;
+	}
 }
