--- a/client/components/select-dropdown/style.scss
+++ b/client/components/select-dropdown/style.scss
@@ -53,7 +53,7 @@ $compact-header-height: 35;
 .select-dropdown__header {
 	height: #{ $header-height }px;
 	line-height: #{ $header-height - 3 }px;
-	padding: 0 75px 0 #{ $side-margin }px;
+	padding: 0 32px 0 #{ $side-margin }px;
 	box-sizing: border-box;
 
 	border-style: solid;
@@ -85,6 +85,10 @@ $compact-header-height: 35;
 			right: 5px;
 			line-height: #{ $compact-header-height }px;
 		}
+	}
+
+	.has-count & {
+		padding-right: 75px;
 	}
 
 	.is-compact & {
