--- a/client/extensions/woocommerce/app/settings/payments/style.scss
+++ b/client/extensions/woocommerce/app/settings/payments/style.scss
@@ -55,6 +55,14 @@
 
 .payments__type-container {
 	.list__ul {
+		.list-item {
+			border-top: 1px solid lighten( $gray, 30% );
+		}
+
+		.list-header + div > li {
+			border-top: 0;
+		}
+
 		> div {
 			li:nth-child( 2 ) {
 				padding: 16px;
